# DSPmath

./: CLAUDE.md  CMakeLists.txt  README.md  dspmath.hpp
tests/: compare_std.cpp
